--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -1829,20 +1829,29 @@
 "signup_redesign_etk_checkbox_desc" = "%1$S habe ich gelesen und angenommen.";
 "signup_redesign_etk_link" = "Kommerziell- elektronischer Nachrichten- und Datenerlaubnistext";
 "signup_redesign_eula_accept_button" = "Ich bestätige";
-"invitation_home_card_button_title" = "";
+"invitation_home_card_button_title" = "Weiter";
 
 /*Print redirection warning*/
-"warning_popup_print_redirect_title" = "";
-"warning_popup_print_redirect_message" = "";
-"warning_popup_print_redirect_proceed_button" = "";
-"warning_popup_print_redirect_cancel_button" = "";
+"warning_popup_print_redirect_title" = "Sie werden auf eine andere Seite weitergeleitet";
+"warning_popup_print_redirect_message" = "Sie werden zu einer anderen Website weitergeleitet, um Ihre Fotos auszudrucken";
+"warning_popup_print_redirect_proceed_button" = "Weiter";
+"warning_popup_print_redirect_cancel_button" = "Cancel";
 "settings_item_invitation" = "";
-"title_invitation_campaign" = "";
-"title_invitation_link" = "";
-"title_invitation_friends" = "";
-"title_invitation_packages" = "";
-"invitation_snackbar_copy" = "";
-"invitation_share" = "";
-"invitation_friends" = "";
+"title_invitation_campaign" = "Kampagnendetails";
+"title_invitation_link" = "Spezieller Einladungslink für Sie";
+"title_invitation_friends" = "Diejenigen, die ihre Einladung angenommen haben (%d Leute)";
+"title_invitation_packages" = "Gewonnene Geschenke (%d Geschenke)";
+"invitation_snackbar_copy" = "Ihr Einladungslink wurde erfolgreich kopiert";
+"invitation_share" = "Link Teilen";
+"invitation_friends" = "Diejenigen, die ihre Einladung angenommen haben";
 "invitation_snackbar_copy_exceed" = "";
 "invitation_snackbar_share_exceed" = "";
+
+/*Accessibility*/
+"play_captcha" = "";
+"refresh_captcha" = "";
+"container_shared_files" = "";
+"container_document" = "";
+"container_music" = "";
+"container_favourite" = "";
+"container_trashed" = "";
