--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -1871,20 +1871,29 @@
 "signup_redesign_etk_checkbox_desc" = "He leído %1$S y lo acepto.";
 "signup_redesign_etk_link" = "Al texto de permiso de datos y mensajes electrónicos comerciales";
 "signup_redesign_eula_accept_button" = "Confirmo";
-"invitation_home_card_button_title" = "";
+"invitation_home_card_button_title" = "Continua";
 
 /*Print redirection warning*/
-"warning_popup_print_redirect_title" = "";
-"warning_popup_print_redirect_message" = "";
-"warning_popup_print_redirect_proceed_button" = "";
-"warning_popup_print_redirect_cancel_button" = "";
+"warning_popup_print_redirect_title" = "Se le dirigirá a un sitio diferente";
+"warning_popup_print_redirect_message" = "Se le dirige a un sitio diferente para que se impriman sus fotos";
+"warning_popup_print_redirect_proceed_button" = "Seguir";
+"warning_popup_print_redirect_cancel_button" = "Cancelar";
 "settings_item_invitation" = "";
-"title_invitation_campaign" = "";
-"title_invitation_link" = "";
-"title_invitation_friends" = "";
-"title_invitation_packages" = "";
-"invitation_snackbar_copy" = "";
-"invitation_share" = "";
-"invitation_friends" = "";
+"title_invitation_campaign" = "Detalles de la Campaña";
+"title_invitation_link" = "Enlace de Invitación especial para usted";
+"title_invitation_friends" = "Aquellos que aceptan tu invitación (%d Contacto)";
+"title_invitation_packages" = "Los regalos que ganaste (%d Regalos)";
+"invitation_snackbar_copy" = "El enlace de tu invitación se ha copiado correctamente";
+"invitation_share" = "Compartir Enlace";
+"invitation_friends" = "Aquellos que lo aceptan";
 "invitation_snackbar_copy_exceed" = "";
 "invitation_snackbar_share_exceed" = "";
+
+/*Accessibility*/
+"play_captcha" = "";
+"refresh_captcha" = "";
+"container_shared_files" = "";
+"container_document" = "";
+"container_music" = "";
+"container_favourite" = "";
+"container_trashed" = "";
