--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -1829,20 +1829,29 @@
 "signup_redesign_etk_checkbox_desc" = "Am citit și accept %1$S.";
 "signup_redesign_etk_link" = "Mesaj Electronic Comercial și Text De Autorizare A Datelor";
 "signup_redesign_eula_accept_button" = "Confirm";
-"invitation_home_card_button_title" = "";
+"invitation_home_card_button_title" = "Continuă";
 
 /*Print redirection warning*/
-"warning_popup_print_redirect_title" = "";
-"warning_popup_print_redirect_message" = "";
-"warning_popup_print_redirect_proceed_button" = "";
-"warning_popup_print_redirect_cancel_button" = "";
+"warning_popup_print_redirect_title" = "Sunteți redirecționat către un alt site";
+"warning_popup_print_redirect_message" = "Pentru ca fotografiile dvs. să poată fi tipărite sunteți redirecționat către un alt site";
+"warning_popup_print_redirect_proceed_button" = "Continuă";
+"warning_popup_print_redirect_cancel_button" = "Anulare";
 "settings_item_invitation" = "";
-"title_invitation_campaign" = "";
-"title_invitation_link" = "";
-"title_invitation_friends" = "";
-"title_invitation_packages" = "";
-"invitation_snackbar_copy" = "";
-"invitation_share" = "";
-"invitation_friends" = "";
+"title_invitation_campaign" = "Detalii Campanie";
+"title_invitation_link" = "Link de invitație special pentru dvs.";
+"title_invitation_friends" = "Persoanele care au acceptat invitația ta  (%d Persoane De Contact)";
+"title_invitation_packages" = "Cadourile Câștigate de tine (%d Cadouri)";
+"invitation_snackbar_copy" = "Linkul tău de invitație a fost copiat cu succes";
+"invitation_share" = "Partajează Link-ul";
+"invitation_friends" = "Persoanele care au acceptat invitația ta";
 "invitation_snackbar_copy_exceed" = "";
 "invitation_snackbar_share_exceed" = "";
+
+/*Accessibility*/
+"play_captcha" = "";
+"refresh_captcha" = "";
+"container_shared_files" = "";
+"container_document" = "";
+"container_music" = "";
+"container_favourite" = "";
+"container_trashed" = "";
