--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -1396,7 +1396,7 @@
 "delete_files" = "İçeriklerimi sil";
 "LifeboxLargePopUpSubTitleBeetween80And99" = "Paket yükseltme seçeneklerine göz at!";
 "LifeboxLargePopUpSubTitle100Premium" = "lifebox alanını doldurdun. Anılarını saklamaya devam etmek için hemen yeni bir paket alabilir veya içeriklerini sahip olduğun alana sığacak şekilde azaltabilirsin.";
-"LifeboxLargePopUpSubTitle100Freemium" = "lifebox saklama alanını doldurdun. Yeni bir paket satın almazsan veya içeriklerini mevcut saklama alanına sığacak şekilde azaltmazsan, tüm içeriklerin silinecek.";
+"LifeboxLargePopUpSubTitle100Freemium" = "lifebox saklama alanını doldurdun. Saklama alanını aştığın için yeni paket almadığın veya mevcut saklama alanına sığacak şekilde düzenleme yapmadığın takdirde , tüm içeriklerin silinecektir.";
 "empty_trash_bin" = "Çöp Kutusunu Temizle";
 "confirm_dialog_header_empty_trashbin" = "Çöp Kutusunu Temizle";
 "confirm_empty_trashbin" = "Çöp kutusundaki tüm içeriklerin kalıcı olarak silinecek. Devam etmek istiyor musun?";
@@ -1847,20 +1847,29 @@
 "signup_redesign_etk_checkbox_desc" = "%1$S okudum ve kabul ediyorum.";
 "signup_redesign_etk_link" = "Ticari Elektronik İleti ve Veri İzni Metni'ni";
 "signup_redesign_eula_accept_button" = "Onaylıyorum";
-"invitation_home_card_button_title" = "Devam Et";
+"invitation_home_card_button_title" = "Davet Et";
 
 /*Print redirection warning*/
 "warning_popup_print_redirect_title" = "Farklı bir siteye yönlendiriliyorsunuz";
 "warning_popup_print_redirect_message" = "Fotoğraflarınızın baskısının alınabilmesi için farklı bir siteye yönlendiriliyorsunuz";
 "warning_popup_print_redirect_proceed_button" = "Devam";
 "warning_popup_print_redirect_cancel_button" = "İptal";
-"settings_item_invitation" = "Davet Et, Kazan & Kazandır";
+"settings_item_invitation" = "Arkadaşını Davet Et";
 "title_invitation_campaign" = "Kampanya Detayları";
 "title_invitation_link" = "Size Özel Davet Linki";
-"title_invitation_friends" = "Davetini Kabul Edenler (%d  Kişi)";
+"title_invitation_friends" = "Davetini Kabul Edenler (%d Kişi)";
 "title_invitation_packages" = "Kazandığın Hediyeler (%d Hediye)";
 "invitation_snackbar_copy" = "Davet linkin başarıyla kopyalandı";
 "invitation_share" = "Linki Paylaş";
 "invitation_friends" = "Davetini Kabul Edenler";
-"invitation_snackbar_copy_exceed" = "";
-"invitation_snackbar_share_exceed" = "";
+"invitation_snackbar_copy_exceed" = "Üzgünüz, davet linkinin hediye limiti doldu";
+"invitation_snackbar_share_exceed" = "Üzgünüz, davet linkinin hediye limiti doldu";
+
+/*Accessibility*/
+"play_captcha" = "";
+"refresh_captcha" = "";
+"container_shared_files" = "";
+"container_document" = "";
+"container_music" = "";
+"container_favourite" = "";
+"container_trashed" = "";
