--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -1831,20 +1831,29 @@
 "signup_redesign_etk_checkbox_desc" = "Прочитав і приймаю %1$S.";
 "signup_redesign_etk_link" = "Комерційне Електронне Повідомлення Та Текст Дозволу Обробки Даних";
 "signup_redesign_eula_accept_button" = "Погоджую";
-"invitation_home_card_button_title" = "";
+"invitation_home_card_button_title" = "Продовжуй";
 
 /*Print redirection warning*/
-"warning_popup_print_redirect_title" = "";
-"warning_popup_print_redirect_message" = "";
-"warning_popup_print_redirect_proceed_button" = "";
-"warning_popup_print_redirect_cancel_button" = "";
+"warning_popup_print_redirect_title" = "Вас перенаправляють на інший сайт";
+"warning_popup_print_redirect_message" = "Ви будете перенаправлені на інший сайт для друку ваших фотографій";
+"warning_popup_print_redirect_proceed_button" = "Продовження";
+"warning_popup_print_redirect_cancel_button" = "Скасування";
 "settings_item_invitation" = "";
-"title_invitation_campaign" = "";
-"title_invitation_link" = "";
-"title_invitation_friends" = "";
-"title_invitation_packages" = "";
-"invitation_snackbar_copy" = "";
-"invitation_share" = "";
-"invitation_friends" = "";
+"title_invitation_campaign" = "Деталі Кампанії";
+"title_invitation_link" = "Спеціальна Запрошувальна Посилання Для Вас";
+"title_invitation_friends" = "Прийняли запрошення (%d Контакта)";
+"title_invitation_packages" = "Виграні Подарунка (%d Подарунок)";
+"invitation_snackbar_copy" = "Ваша запрошувальна посилання була успішно скопійована";
+"invitation_share" = "Поділися Посиланням";
+"invitation_friends" = "Прийняли Твоє Запрошення";
 "invitation_snackbar_copy_exceed" = "";
 "invitation_snackbar_share_exceed" = "";
+
+/*Accessibility*/
+"play_captcha" = "";
+"refresh_captcha" = "";
+"container_shared_files" = "";
+"container_document" = "";
+"container_music" = "";
+"container_favourite" = "";
+"container_trashed" = "";
