--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -1841,7 +1841,7 @@
 "signup_redesign_etk_checkbox_desc" = "قرأت %1$S وأوافق عليها.";
 "signup_redesign_etk_link" = "نص الرسائل الإلكترونية التجارية وإذن البيانات";
 "signup_redesign_eula_accept_button" = "أوافق";
-"invitation_home_card_button_title" = "واصل";
+"invitation_home_card_button_title" = "";
 
 /*Print redirection warning*/
 "warning_popup_print_redirect_title" = "تتم إعادة توجيهك إلى موقع مختلف.";
