--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2137,7 +2137,7 @@ Please check I have understood the intended command here*/
 "signup_redesign_etk_checkbox_desc" = "J'ai lu %1$S et je l'accepte.";
 "signup_redesign_etk_link" = "Le message électronique commercial et texte d'autorisation de données";
 "signup_redesign_eula_accept_button" = "Je confirme";
-"invitation_home_card_button_title" = "Continuez";
+"invitation_home_card_button_title" = "";
 
 /*Print redirection warning*/
 "warning_popup_print_redirect_title" = "Vous êtes dirigé vers un autre site";
