--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -1829,7 +1829,7 @@
 "signup_redesign_etk_checkbox_desc" = "Am citit și accept %1$S.";
 "signup_redesign_etk_link" = "Mesaj Electronic Comercial și Text De Autorizare A Datelor";
 "signup_redesign_eula_accept_button" = "Confirm";
-"invitation_home_card_button_title" = "Continuă";
+"invitation_home_card_button_title" = "";
 
 /*Print redirection warning*/
 "warning_popup_print_redirect_title" = "Sunteți redirecționat către un alt site";
