--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -1872,7 +1872,7 @@
 "signup_redesign_etk_checkbox_desc" = "%1$S Kam lexuar dhe e pranoj.";
 "signup_redesign_etk_link" = "Tekstin e Mesazhit Elektronik Komercial dhe Lejen e të Dhënave";
 "signup_redesign_eula_accept_button" = "Unë aprovoj";
-"invitation_home_card_button_title" = "Vazhdo";
+"invitation_home_card_button_title" = "";
 
 /*Print redirection warning*/
 "warning_popup_print_redirect_title" = "Ju jeni duke u ridrejtuar në një faqe ueb tjetër";
