--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -1829,14 +1829,14 @@
 "signup_redesign_etk_checkbox_desc" = "%1$S habe ich gelesen und angenommen.";
 "signup_redesign_etk_link" = "Kommerziell- elektronischer Nachrichten- und Datenerlaubnistext";
 "signup_redesign_eula_accept_button" = "Ich bestätige";
-"invitation_home_card_button_title" = "";
+"invitation_home_card_button_title" = "Einladen";
 
 /*Print redirection warning*/
 "warning_popup_print_redirect_title" = "Sie werden auf eine andere Seite weitergeleitet";
 "warning_popup_print_redirect_message" = "Sie werden zu einer anderen Website weitergeleitet, um Ihre Fotos auszudrucken";
 "warning_popup_print_redirect_proceed_button" = "Weiter";
 "warning_popup_print_redirect_cancel_button" = "Cancel";
-"settings_item_invitation" = "";
+"settings_item_invitation" = "Freund/Freundin einladen";
 "title_invitation_campaign" = "Kampagnendetails";
 "title_invitation_link" = "Spezieller Einladungslink für Sie";
 "title_invitation_friends" = "Diejenigen, die ihre Einladung angenommen haben (%d Leute)";
@@ -1844,8 +1844,8 @@
 "invitation_snackbar_copy" = "Ihr Einladungslink wurde erfolgreich kopiert";
 "invitation_share" = "Link Teilen";
 "invitation_friends" = "Diejenigen, die ihre Einladung angenommen haben";
-"invitation_snackbar_copy_exceed" = "";
-"invitation_snackbar_share_exceed" = "";
+"invitation_snackbar_copy_exceed" = "Das Geschenklimit des Einladungslinks ist leider abgelaufen.";
+"invitation_snackbar_share_exceed" = "Das Geschenklimit des Einladungslinks ist leider abgelaufen.";
 
 /*Accessibility*/
 "play_captcha" = "";
@@ -1855,3 +1855,7 @@
 "container_music" = "";
 "container_favourite" = "";
 "container_trashed" = "";
+
+/*Chatbot*/
+"chatbot_menu_title" = "";
+"print_photo_home_card_button_title" = "";
