--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -1872,14 +1872,14 @@
 "signup_redesign_etk_checkbox_desc" = "%1$S Kam lexuar dhe e pranoj.";
 "signup_redesign_etk_link" = "Tekstin e Mesazhit Elektronik Komercial dhe Lejen e të Dhënave";
 "signup_redesign_eula_accept_button" = "Unë aprovoj";
-"invitation_home_card_button_title" = "";
+"invitation_home_card_button_title" = "Ftoni";
 
 /*Print redirection warning*/
 "warning_popup_print_redirect_title" = "Ju jeni duke u ridrejtuar në një faqe ueb tjetër";
 "warning_popup_print_redirect_message" = "Ju jeni duke u ridrejtuar në një faqe ueb tjetër, në mënyrë që fotot tuaja të shtypen";
 "warning_popup_print_redirect_proceed_button" = "Vazhdo";
 "warning_popup_print_redirect_cancel_button" = "Anulo";
-"settings_item_invitation" = "";
+"settings_item_invitation" = "Ftoni një shok";
 "title_invitation_campaign" = "Detajet e Fushatës";
 "title_invitation_link" = "Link Ftesës Vetëm për Ju";
 "title_invitation_friends" = "Ata që e Pranuan Ftesën Tuaj (%d Persona)";
@@ -1887,8 +1887,8 @@
 "invitation_snackbar_copy" = "Linku juaj i ftesës është kopjuar me sukses";
 "invitation_share" = "Shpërnda Linkun";
 "invitation_friends" = "Ata që e Pranuan Ftesën Tuaj";
-"invitation_snackbar_copy_exceed" = "";
-"invitation_snackbar_share_exceed" = "";
+"invitation_snackbar_copy_exceed" = "Na vjen keq, limiti i dhuratës së linkut të ftesës ka skaduar.";
+"invitation_snackbar_share_exceed" = "Na vjen keq, limiti i dhuratës së linkut të ftesës ka skaduar.";
 
 /*Accessibility*/
 "play_captcha" = "";
@@ -1898,3 +1898,7 @@
 "container_music" = "";
 "container_favourite" = "";
 "container_trashed" = "";
+
+/*Chatbot*/
+"chatbot_menu_title" = "";
+"print_photo_home_card_button_title" = "";
