DE-10699 -> Chatbot deeplink

--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2166,3 +2166,4 @@ Please check I have understood the intended command here*/
 
 /*Chatbot*/
 "chatbot_menu_title" = "";
+"print_photo_home_card_button_title" = "";
