--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1905,6 +1905,8 @@
 "container_music" = "Music";
 "container_favourite" = "Favourite";
 "container_trashed" = "Trashed";
+"accessibility_play" = "Play";
+"accessibility_pause" = "Pause";
 
 /*Chatbot*/
 "chatbot_menu_title" = "Lifebox Support";
