--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -1873,3 +1873,5 @@
 /*Chatbot*/
 "chatbot_menu_title" = "";
 "print_photo_home_card_button_title" = "";
+"accessibility_play" = "";
+"accessibility_pause" = "";
