--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -1902,3 +1902,5 @@
 /*Chatbot*/
 "chatbot_menu_title" = "";
 "print_photo_home_card_button_title" = "";
+"accessibility_play" = "";
+"accessibility_pause" = "";
