--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -1901,3 +1901,5 @@
 /*Chatbot*/
 "chatbot_menu_title" = "";
 "print_photo_home_card_button_title" = "";
+"accessibility_play" = "";
+"accessibility_pause" = "";
