--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -1859,3 +1859,5 @@
 /*Chatbot*/
 "chatbot_menu_title" = "";
 "print_photo_home_card_button_title" = "";
+"accessibility_play" = "";
+"accessibility_pause" = "";
