--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -1876,6 +1876,6 @@
 
 /*Chatbot*/
 "chatbot_menu_title" = "Lifebox Destek";
-"print_photo_home_card_button_title" = "";
+"print_photo_home_card_button_title" = "Fotoğraflara Git";
 "accessibility_play" = "Oynat";
 "accessibility_pause" = "Durdur";
