--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1900,11 +1900,11 @@
 /*Accessibility*/
 "play_captcha" = "Play captcha";
 "refresh_captcha" = "Refresh captcha";
-"container_shared_files" = "Shared";
+"container_shared_files" = "Shared by me";
 "container_document" = "Document";
 "container_music" = "Music";
 "container_favourite" = "Favourite";
-"container_trashed" = "Trashed";
+"container_trashed" = "Trash Bin";
 
 /*Chatbot*/
 "chatbot_menu_title" = "Lifebox Support";
