--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -178,7 +178,7 @@
 "New PlayList" = "New PlayList";
 "New Album" = "New Album";
 "New Folder" = "New Folder";
-"Print" = "Foto Baskı";
+"Print" = "Photo Print";
 "Make album cover" = "Make album cover";
 "Add To Album" = "Add To Album";
 "Remove From Album" = "Remove From Album";
