--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -1250,7 +1250,7 @@
 "landing_billo_subtitle_5" = "Sana özel yarattığımız hikayeler, albümler ve kolajlarla anılarını tekrar yaşa!";
 "landing_billo_title_6" = "Sosyal Medya";
 "landing_billo_subtitle_6" = "Sosyal medyadaki tüm arşivini kolayca Billo'ya transfer et!";
-"landing_billo_title_7" = "Baskı Al";
+"landing_billo_title_7" = "Foto Baskı";
 "landing_billo_subtitle_7" = "Yaşam alanını anılarınla süsle!";
 
 /*introduce billo*/
