--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -1861,3 +1861,8 @@
 "print_photo_home_card_button_title" = "Go to photos";
 "accessibility_play" = "Abspielen";
 "accessibility_pause" = "Stoppen";
+
+/*Password Rules*/
+"signup_password_rule_character_limit" = "";
+"signup_password_rule_upper_lower_numeric" = "";
+"signup_password_rule_sequential_characters" = "";
