--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -1904,3 +1904,8 @@
 "print_photo_home_card_button_title" = "Go to photos";
 "accessibility_play" = "Luaj";
 "accessibility_pause" = "Ndalo";
+
+/*Password Rules*/
+"signup_password_rule_character_limit" = "";
+"signup_password_rule_upper_lower_numeric" = "";
+"signup_password_rule_sequential_characters" = "";
