--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1911,3 +1911,8 @@
 "print_photo_home_card_button_title" = "Go to photos";
 "accessibility_play" = "Play";
 "accessibility_pause" = "Pause";
+
+/*Password Rules*/
+"signup_password_rule_character_limit" = "";
+"signup_password_rule_upper_lower_numeric" = "";
+"signup_password_rule_sequential_characters" = "";
