--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -1903,3 +1903,8 @@
 "print_photo_home_card_button_title" = "Go to photos";
 "accessibility_play" = "Reproducir";
 "accessibility_pause" = "Pausar";
+
+/*Password Rules*/
+"signup_password_rule_character_limit" = "";
+"signup_password_rule_upper_lower_numeric" = "";
+"signup_password_rule_sequential_characters" = "";
