--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2169,3 +2169,8 @@ Please check I have understood the intended command here*/
 "print_photo_home_card_button_title" = "Go to photos";
 "accessibility_play" = "Jouez";
 "accessibility_pause" = "Arrêtez";
+
+/*Password Rules*/
+"signup_password_rule_character_limit" = "";
+"signup_password_rule_upper_lower_numeric" = "";
+"signup_password_rule_sequential_characters" = "";
