--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -1879,3 +1879,8 @@
 "print_photo_home_card_button_title" = "Fotoğraflara Git";
 "accessibility_play" = "Oynat";
 "accessibility_pause" = "Durdur";
+
+/*Password Rules*/
+"signup_password_rule_character_limit" = "";
+"signup_password_rule_upper_lower_numeric" = "";
+"signup_password_rule_sequential_characters" = "";
