--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -1863,3 +1863,8 @@
 "print_photo_home_card_button_title" = "Go to photos";
 "accessibility_play" = "Відтворити";
 "accessibility_pause" = "Зупинити";
+
+/*Password Rules*/
+"signup_password_rule_character_limit" = "";
+"signup_password_rule_upper_lower_numeric" = "";
+"signup_password_rule_sequential_characters" = "";
