--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1913,6 +1913,6 @@
 "accessibility_pause" = "Pause";
 
 /*Password Rules*/
-"signup_password_rule_character_limit" = "";
-"signup_password_rule_upper_lower_numeric" = "";
-"signup_password_rule_sequential_characters" = "";
+"signup_password_rule_character_limit" = "Min 6 - max 16 characters";
+"signup_password_rule_upper_lower_numeric" = "1 Uppercase/lowercase letter & 1 number";
+"signup_password_rule_sequential_characters" = "Non-consecutive characters";
