--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -1881,6 +1881,6 @@
 "accessibility_pause" = "Durdur";
 
 /*Password Rules*/
-"signup_password_rule_character_limit" = "";
-"signup_password_rule_upper_lower_numeric" = "";
-"signup_password_rule_sequential_characters" = "";
+"signup_password_rule_character_limit" = "En az 6 - en çok 16 karakter";
+"signup_password_rule_upper_lower_numeric" = "1 Büyük/küçük harf & 1 rakam";
+"signup_password_rule_sequential_characters" = "Ardışık olmayan karakterler";
